# ot-heterogeneity

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
.utils/: upload_pip.sh
oterogeneity/: __init__.py  oterogeneity.py  utils.py
oterogeneity/segregation/: __init__.py  _multiscalar_divergences.py  multiscalar.py
